--- a/data/eksanos.desktop
+++ b/data/eksanos.desktop
@@ -1,10 +1,10 @@
 [Desktop Entry]
-Name=Hello Packaging
-GenericName=Packaging Example App
-Comment=Base Skeleton App with Flatpak packaging
-Catagories=Example;Utility;Education;
-Exec=com.github.keilith-l.hello-packaging
-Icon=com.github.keilith-l.hello-packaging
+Name=Eksanos
+GenericName=TicTacToe
+Comment=Simple TicTacToe Game
+Catagories=Game;Utility;Education;
+Exec=com.github.keilith-l.eksanos
+Icon=com.github.keilith-l.eksanos
 Terminal=false
 Type=Application
-Keywords=Example;Packaging;Flatpak;
+Keywords=Example;
