--- a/meson.build
+++ b/meson.build
@@ -3,6 +3,7 @@ project('com.github.keilith-l.eksanos', 'vala', 'c')
 executable(
 	meson.project_name(),
 	'src'/'Application.vala',
+	'src'/'MainWindow.vala',
 	dependencies: [
 		dependency('gtk+-3.0')
 	],
