--- a/meson.build
+++ b/meson.build
@@ -4,6 +4,9 @@ executable(
 	meson.project_name(),
 	'src'/'Application.vala',
 	'src'/'MainWindow.vala',
+	'src'/'Player.vala',
+	'src'/'Board.vala',
+	'src'/'Tile.vala',
 	dependencies: [
 		dependency('gtk+-3.0')
 	],
