MVC-Refactor Complete

--- a/meson.build
+++ b/meson.build
@@ -5,11 +5,14 @@ executable(
 	'src'/'Application.vala',
 	'src'/'MainWindow.vala',
 	'src'/'GameController.vala',
-	'src'/'Player.vala',
-	'src'/'Board.vala',
-	'src'/'Tile.vala',
+	'src'/'Model'/'Game.vala',
+	'src'/'Model'/'Player.vala',
+	'src'/'Model'/'Board.vala',
+	'src'/'Model'/'Tile.vala',
+	'src'/'Widgets'/'GameScreen.vala',
 	'src'/'Widgets'/'PlayerInfoBox.vala',
 	'src'/'Widgets'/'TileButton.vala',
+	'src'/'Widgets'/'BoardGrid.vala',
 	dependencies: [
 		dependency('libhandy-1', version: '>=0.91.0'),
 		dependency('granite'),
