Added color dropdown menu

--- a/meson.build
+++ b/meson.build
@@ -23,6 +23,7 @@ executable(
 	'src'/'Widgets'/'PlayerInfoBox.vala',
 	'src'/'Widgets'/'TileButton.vala',
 	'src'/'Widgets'/'BoardGrid.vala',
+	'src'/'Widgets'/'ColorDropDown.vala',
 	dependencies: [
 		dependency('libhandy-1', version: '>=0.91.0'),
 		dependency('granite'),
