updated files for dash fix

--- a/data/eksanos.desktop
+++ b/data/eksanos.desktop
@@ -3,8 +3,8 @@ Name=Eksanos
 GenericName=TicTacToe
 Comment=Simple TicTacToe Game
 Catagories=Game;Utility;Education;
-Exec=com.github.keilith-l.eksanos
-Icon=com.github.keilith-l.eksanos
+Exec=com.github.keilith_l.eksanos
+Icon=com.github.keilith_l.eksanos
 Terminal=false
 Type=Application
 Keywords=Example;
