Fix application not showing when installed as a flatpak

--- a/data/eksanos.desktop
+++ b/data/eksanos.desktop
@@ -1,10 +1,10 @@
 [Desktop Entry]
 Name=Eksanos
-GenericName=TicTacToe;Naughts and Crosses;
-Comment=Simple TicTacToe Game
-Catagories=Game;Utility;Education;
+GenericName=TicTacToe;
+Comment=A TicTacToe Game
+Categories=Game;Utility;
 Exec=com.github.eksanos.eksanos
 Icon=com.github.eksanos.eksanos
 Terminal=false
 Type=Application
-Keywords=Example;
+Keywords=TicTacToe;Naughts;Crosses;
