--- a/meson.build
+++ b/meson.build
@@ -14,7 +14,7 @@ executable(
 	'src'/'Application.vala',
 	'src'/'MainWindow.vala',
 	'src'/'MainMenu.vala',
-	'src'/'GameController.vala',
+	'src'/'Controllers'/'Game.vala',
 	'src'/'Model'/'Game.vala',
 	'src'/'Model'/'Player.vala',
 	'src'/'Model'/'Board.vala',
