Reintroduced ColorDropDown Widget

--- a/meson.build
+++ b/meson.build
@@ -24,7 +24,7 @@ executable(
 	#'src'/'Widgets'/'PlayerInfoBox.vala',
 	#'src'/'Widgets'/'TileButton.vala',
 	#'src'/'Widgets'/'BoardGrid.vala',
-	#'src'/'Widgets'/'ColorDropDown.vala',
+	'src'/'Widgets'/'ColorDropDown.vala',
 	#'src'/'Widgets'/'TurnTrackerStack.vala',
 	dependencies: [
 		dependency('libadwaita-1'),
