Re-enabled GameController and added all src files to the meson build

--- a/meson.build
+++ b/meson.build
@@ -14,18 +14,18 @@ executable(
 	'src'/'Application.vala',
 	'src'/'MainWindow.vala',
 	'src'/'MainMenu.vala',
-	#'src'/'Controllers'/'Game.vala',
-	#'src'/'Model'/'Game.vala',
-	#'src'/'Model'/'Player.vala',
-	#'src'/'Model'/'Board.vala',
-	#'src'/'Model'/'Tile.vala',
-	#'src'/'Widgets'/'GameScreen.vala',
-	#'src'/'Widgets'/'Dialogs'/'MatchOverDialog.vala',
-	#'src'/'Widgets'/'PlayerInfoBox.vala',
-	#'src'/'Widgets'/'TileButton.vala',
-	#'src'/'Widgets'/'BoardGrid.vala',
+	'src'/'Controllers'/'Game.vala',
+	'src'/'Model'/'Game.vala',
+	'src'/'Model'/'Player.vala',
+	'src'/'Model'/'Board.vala',
+	'src'/'Model'/'Tile.vala',
+	'src'/'Widgets'/'GameScreen.vala',
+	'src'/'Widgets'/'Dialogs'/'MatchOverDialog.vala',
+	'src'/'Widgets'/'PlayerInfoBox.vala',
+	'src'/'Widgets'/'TileButton.vala',
+	'src'/'Widgets'/'BoardGrid.vala',
 	'src'/'Widgets'/'ColorDropDown.vala',
-	#'src'/'Widgets'/'TurnTrackerStack.vala',
+	'src'/'Widgets'/'TurnTrackerStack.vala',
 	dependencies: [
 		dependency('libadwaita-1'),
 		dependency('granite-7', version: '>=7.0.0'),
