--- a/data/eksanos.desktop
+++ b/data/eksanos.desktop
@@ -3,8 +3,8 @@ Name=Eksanos
 GenericName=TicTacToe;
 Comment=A TicTacToe Game
 Categories=Game;
-Exec=com.github.eksanos.eksanos-gtk4
-Icon=com.github.eksanos.eksanos-gtk4
+Exec=com.github.eksanos.eksanos
+Icon=com.github.eksanos.eksanos
 Terminal=false
 Type=Application
 Keywords=TicTacToe;Naughts;Crosses;
